Launcher3: Add an option to hide/show scrollbar in app drawer
neobuddy89: Clean up and adapt for Launcher3.

Co-authored-by: Zongle Wang <wangzongler@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/res/values/everest_strings.xml
+++ b/res/values/everest_strings.xml
@@ -435,4 +435,8 @@
     <string name="about_thanks_cat">Special thanks to</string>
     <string name="about">About</string>
     <string name="about_summary">Info about the Everest Launcher</string>
+
+    <!-- App drawer scrollbar -->
+    <string name="drawer_scrollbar_title">Scrollbar</string>
+    <string name="drawer_scrollbar_summary">Scrollbar on side of the app drawer</string>
 </resources>
