--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -31,7 +31,7 @@
 
     <style name="LauncherTheme" parent="@style/BaseLauncherTheme">
         <item name="android:textColorSecondary">@*android:color/system_neutral2_800</item>
-        <item name="allAppsScrimColor">#e2e2e2</item>
+        <item name="allAppsScrimColor">@*android:color/system_neutral1_100</item>
         <item name="allappsHeaderProtectionColor">@*android:color/transparent</item>
         <item name="searchHintHighlight">@*android:color/system_neutral1_800</item>
         <item name="allAppsNavBarScrimColor">#66FFFFFF</item>
@@ -149,7 +149,7 @@
         <item name="android:textColorHint">#A0FFFFFF</item>
         <item name="android:colorControlHighlight">#19FFFFFF</item>
         <item name="android:colorPrimary">#FF212121</item>
-        <item name="allAppsScrimColor">#2e3133</item>
+        <item name="allAppsScrimColor">@*android:color/system_neutral1_800</item>
         <item name="allappsHeaderProtectionColor">@*android:color/transparent</item>
         <item name="searchHintHighlight">@*android:color/system_accent1_200</item>
         <item name="allAppsNavBarScrimColor">#80000000</item>
